syntax = "proto3";
package alliance.alliance;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "cosmos_proto/cosmos.proto";
import "alliance/params.proto";


// key: denom value: AllianceAsset
message AllianceAsset {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;

  // Denom of the asset. It could either be a native token or an IBC token
  string denom      = 1 [(gogoproto.moretags) = "yaml:\"denom\""];
  // The reward weight specifies the ratio of rewards that will be given to each alliance asset
  // It does not need to sum to 1. rate = weight / total_weight
  // Native asset is always assumed to have a weight of 1.
  string reward_weight = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // A positive take rate is used for liquid staking derivatives. It defines an annualized reward rate that
  // will be redirected to the distribution rewards pool
  string take_rate = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

message AddAssetProposal {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;
  option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";

  string   title                           = 1;
  string   description                     = 2;
  AllianceAsset asset = 3;
}

message RemoveAssetProposal {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;
  option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";

  string   title                           = 1;
  string   description                     = 2;
  string denom = 3 ;
}

message UpdateAssetProposal {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;
  option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";

  string   title                           = 1;
  string   description                     = 2;
  AllianceAsset asset = 3;
}
